--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-p, h1, h2, h3, h4, h5, h6, ul, ol, dl, pre {
+p, h1, h2, h3, h4, h5, h6, ul, ol, dl, pre, table {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
+
+table { border: 1px solid #ccc;
+      background-color: #f5f5f5;
+      padding: 5px 5px;
+      width: 900px;
+}
+
+th, td { border: 1px solid #ccc;}
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Hoefler Text", serif;
