Add a margin to the body element
So its content is not right up against the top of the viewport.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     font-family: Georgia, serif;
     font-size: 17px;
     line-height: 23px;
+    margin-top: 68px; /* 4em */
 }
 
 pre,code {
